# M5-go

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: angle.rs  ble.rs  button_interrupt.rs  i2c.rs  lights.rs  m5core_ink_blinky.rs  m5go_lights.rs  m5go_speaker.rs  screen.rs  speaker.rs
src/: ble.rs  io.rs  leds.rs  lib.rs  screen.rs  speaker.rs
