[package]
name = "m5-go"
version = "0.1.0"
authors = ["Newintel <franck.labracherie@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
anyhow = "1"
esp-idf-hal = "0.39.3"
smart-leds = "0.3.0"
ws2812-esp32-rmt-driver = "0.4.0"
ili9341 = "0.5.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", features = ["esp32", "ble"] }

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"

[dev-dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps" }
bleps-macros = { git = "https://github.com/bjoernQ/bleps", package = "bleps-macros" }


[patch.crates-io]
ili9341 = { git = "https://github.com/verylowfreq/ili9341-rs", branch = "patched-v0.5.0" }
