[package]
name = "m5-go"
version = "0.1.0"
authors = ["Newintel <franck.labracherie@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]
default = ["native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart", "std", "native"] }
anyhow = "1"
esp-idf-hal = "0.40.1"
smart-leds = "0.3.0"
ws2812-esp32-rmt-driver = { git = "https://github.com/Newintel/ws2812-esp32-rmt-driver" }
ili9341 = "0.5.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
esp-idf-ble = { git = "https://github.com/Newintel/esp-idf-ble" }
esp-println = { version = "0.3.1", features = ["esp32"] }
esp-idf-svc = "0.45.0"
log = "0.4.17"

[dev-dependencies]
critical-section = { version = "1.1.1", features = ["std"] }

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"


[patch.crates-io]
ili9341 = { git = "https://github.com/verylowfreq/ili9341-rs", branch = "patched-v0.5.0" }
